# walmart_receipt_crawler

./: .gitignore  README.md  format.py  main.py  pyproject.toml
src/walmart_receipt_crawler/: __init__.py  cli.py  crawler.py  pdf_utils.py
